_sass/4-layouts/_article.scss
.article {
  margin-bottom: 20px;

  .article__wrapper {
    display: flex;
    align-items: center;

    .article__image {
        width: 20%;
        display: block;
        background-position: center;
        background-size: contain;
        background-repeat: no-repeat;
        background-color: $white;
        aspect-ratio: 1/1;
    
        &:hover {
          opacity: 0.9;
        }
    
        &:after {
          content: "";
          display: table;
          width: 100%;
          padding-bottom: 100%;
        }
      }
    
      .article__content {
        width: 80%;
        padding: 30px;
        display: block;
        margin-left: 1%;
        z-index: 1;
        border-radius: 3px;
        background: rgba(255, 255, 255, 0.98);
        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
    
        .article__tag {
          font-size: 12px;
          letter-spacing: 0.5px;
          font-weight: 700;
          text-transform: uppercase;
        }
    
        .article__title {
          margin-bottom: 10px;
          font-size: 20px;
    
          a {
            color: $dark;
    
            &:hover {
              color: $black;
            }
          }
        }
    
        .article__excerpt {
          margin-bottom: 20px;
          font-size: 16px;
          line-height: 26px;
        }
    
        .article__meta {
          font-size: 12px;
          line-height: 18px;
          text-transform: uppercase;
          color: $gray;
        }
    
        .article__footer {
          display: flex;
          align-items: center;
    
          .read-more {
            margin-left: auto;
            padding-bottom: 5px;
            font-size: 12px;
            line-height: 18px;
            letter-spacing: 1px;
            // text-transform: uppercase;
            border-bottom: 1px solid transparent;
            color: $gray;
    
            &:hover {
              color: $dark;
              border-color: $brand-color;
            }
          }
    
          .link-block {
            margin-top: 5px;
            margin-bottom: 5px;
    
    
          }
    
        }
      }
  }

  .article__image {
    width: 20%;
    display:block;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: $white;
    aspect-ratio: 1/1;
    &:hover {
      opacity: 0.9;
    }

    &:after {
      content: "";
      display: table;
      width: 100%;
      padding-bottom: 100%;
    }
  }

  .article__content {
    width: 80%;
    height: auto;
    padding: 20px;
    margin-left: 1%;
    z-index: 1;
    border-radius: 3px;
    background: rgba(255, 255, 255, 0.98);
    box-shadow: 0 1px 4px rgba(0,0,0,0.15);

    .article__tag {
      font-size: 12px;
      letter-spacing: 0.5px;
      font-weight: 700;
      text-transform: uppercase;
    }

    .article__title {
      margin-bottom: 10px;
      font-size: 20px;
      
      a {
        color: $dark;
        &:hover {
          color: $black;
        }
      }
    }

    .article__excerpt {
      margin-bottom: 20px;
      font-size: 16px;
      line-height: 26px;
    }

    .article__meta {
      font-size: 12px;
      line-height: 18px;
      text-transform: uppercase;
      color: $gray;
    }

    .article__footer {
      display: flex;
      align-items: center;

      .read-more {
        margin-left: auto;
        padding-bottom: 5px;
        font-size: 12px;
        line-height: 18px;
        letter-spacing: 1px;
        // text-transform: uppercase;
        border-bottom: 1px solid transparent;
        color: $gray;
        &:hover {
          color: $dark;
          border-color: $brand-color;
        }
      }

      .link-block {
        margin-top: 5px;
        margin-bottom: 5px;

        
      }

    }
  }

  .article-without-image {
    width: 100%;
    margin-left: auto;
  }

  @media only screen and (max-width: $tablet) {
    .article__wrapper {
      flex-direction: column;
    }

    .article__image {
      width: 100%;
    }

    .article__content {
      width: 90%;
      padding: 20px;
      margin: -10% 0 0 0;
    }

    .article-without-image {
      width: 90%;
      margin: 0;
    }
  }

  @media only screen and (max-width: $mobile) {
    .article__content {

      .article__title {
        font-size: 27px;
      }
    }
  }
}

